--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "slugify": "^1.4.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
