--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
+    "multer": "^1.4.2",
+    "shortid": "^2.2.16",
     "slugify": "^1.4.7"
   },
   "devDependencies": {
